@@ -1,3 +1,7 @@
+Mon Apr 09 14:06:58 BST 2007  Olly Betts <olly@survex.com>
+
+	* backends/flint/flint_database.cc: Just assign to doclens[did].
+
 Mon Apr 09 11:29:22 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* backends/quartz/quartz_database.cc: Apply same change to quartz.
